paging first approach
